tests/ui/privacy/pub-priv-dep/shared-direct-private-public-first.stderr
error: type `Shared` from private dependency 'shared' in public interface
  --> $DIR/shared-direct-private-public-first.rs:14:1
   |
LL | pub fn leaks_direct_name() -> shared::Shared {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/shared-direct-private-public-first.rs:9:9
   |
LL | #![deny(exported_private_dependencies)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

